# sdk-contract/sdk-exchange/sdk-exchange-user/sdk-service-exchange-user-rest-api/src/main/java/open/vincentf13/exchange/user/api/dto/UserRegisterRequest.java
@@ -4,7 +4,7 @@ import jakarta.validation.constraints.Email;
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.Size;
 
-public record RegisterUserRequest(
+public record UserRegisterRequest(
         @Email(message = "Email format invalid")
         @NotBlank(message = "Email is required")
         String email,
