# service/exchange/exchange-user/src/main/java/open/vincentf13/exchange/user/interfaces/UserController.java
@@ -3,9 +3,9 @@ package open.vincentf13.exchange.user.interfaces;
 import lombok.RequiredArgsConstructor;
 import open.vincentf13.common.spring.mvc.OpenApiResponse;
 import open.vincentf13.exchange.user.api.UserApi;
-import open.vincentf13.exchange.user.api.dto.RegisterUserRequest;
-import open.vincentf13.exchange.user.api.dto.UpdateUserStatusRequest;
+import open.vincentf13.exchange.user.api.dto.UserRegisterRequest;
 import open.vincentf13.exchange.user.api.dto.UserResponse;
+import open.vincentf13.exchange.user.api.dto.UserUpdateStatusRequest;
 import open.vincentf13.exchange.user.service.UserService;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -16,7 +16,7 @@ public class UserController implements UserApi {
     private final UserService userService;
 
     @Override
-    public OpenApiResponse<UserResponse> register(RegisterUserRequest request) {
+    public OpenApiResponse<UserResponse> register(UserRegisterRequest request) {
         return OpenApiResponse.success(userService.register(request));
     }
 
@@ -34,7 +34,7 @@ public class UserController implements UserApi {
     }
 
     @Override
-    public OpenApiResponse<UserResponse> updateStatus(Long id, UpdateUserStatusRequest request) {
+    public OpenApiResponse<UserResponse> updateStatus(Long id, UserUpdateStatusRequest request) {
         return OpenApiResponse.success(userService.updateStatus(id, request));
     }
 }
